--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,7 +26,7 @@ dev = [
 
 [project.scripts]
 sage-app = "sage_web_apps.run:run_sage_app"
-sage-input = "sage_web_apps.run:run_input_app"
+sage-config = "sage_web_apps.run:run_input_app"
 
 [tool.setuptools]
 packages = ["sage_web_apps"]
